# django-todo-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  readme.md
tasks/: urls.py  views.py
tasks/models/: collection.py  task.py
tasks/templates/: index.html
todo/: settings.py  urls.py
todo/tasks/: admin.py  apps.py  urls.py  views.py
todo/tasks/migrations/: 0001_initial.py
todo/tasks/models/: __init__.py  collection.py
todo/tasks/templates/: index.html
